Fix mobile login page
Fixed how the footer looks at the bottom on mobile. Used to be hidden by the bottom navbar.

--- a/client/src/app/css/2015-tc.css
+++ b/client/src/app/css/2015-tc.css
@@ -772,3 +772,13 @@ body {
     padding-bottom: 0;
   }
 }
+
+@media all and (max-width: 960px){
+  #umnhf-f small:last-child {
+    padding-bottom: 100px; /* Raise footer above bottom navbar */
+  }
+}
+
+#umnhf-f small a {
+    font-weight: bold;
+}
